# geoarrow-c

./: .env  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  docker-compose.yml  index.html  valgrind.supp  vendor-fastfloat.sh  vendor-nanoarrow.sh  vendor-ryu.sh
.github/workflows/: build-and-test.yaml  dev.yaml  docs.yaml  examples.yaml  python-wheels.yaml  python.yaml  r-check.yaml
ci/scripts/: build-docs.sh
cmake/: config.cmake.in
dev/: c.html  genindex.html  index.html  objects.inv  py-modindex.html  python.html  search.html  searchindex.js
dev/_sources/: index.rst.txt
dev/_sources/python/: pyarrow.rst.txt
dev/benchmarks/: CMakeLists.txt  CMakePresets.json
dev/benchmarks/c/: array_view_benchmark.cc  benchmark_lib.cc  benchmark_lib.h  benchmark_util.hpp  coord_view_benchmark.cc  geometry_util_internal.hpp  geometry_util_internal2.cc  geometry_util_internal2.h  hpp_coord_sequence_benchmark.cc  wkb_bounding_benchmark.cc
dev/c/: index.html
dev/python/: geoarrow.html  index.html  pyarrow.html
docs/: README.md
docs/source/: c.rst  conf.py  index.rst  python.rst
docs/source/c/: index.rst
docs/source/python/: geoarrow.rst  index.rst  pandas.rst  pyarrow.rst
examples/cmake-scenarios/: CMakeLists.txt  build.sh
examples/cmake-scenarios/src/: app.cc
python/: .coveragerc  .gitignore  MANIFEST.in  README.ipynb  README.md  bootstrap.py  pyproject.toml  setup.py  temp.ipynb
python/geoarrow/: __init__.py  _lib.c  _lib.pyx  dataset.py  lib.py  pandas.py  pyarrow.py
python/geoarrow-c/: .gitignore  MANIFEST.in  README.ipynb  README.md  bootstrap.py  pyproject.toml  setup.py
python/geoarrow-c/src/geoarrow/c/: __init__.py  _lib.pyx  lib.py  pandas.py
python/geoarrow-c/src/geoarrow/c/geoarrow_python/: geoarrow_config.h  geoarrow_python.h
python/geoarrow-c/src/geoarrow/c/pyarrow/: __init__.py  _compute.py  _dataset.py  _kernel.py  _type.py
python/geoarrow-c/tests/: test_geoarrow_dataset.py  test_geoarrow_lib.py  test_geoarrow_pandas.py  test_geoarrow_pandas_suite.py  test_geoarrow_pyarrow.py  test_geoarrow_pyarrow_compute.py  test_import.py
python/geoarrow-pandas/: pyproject.toml
python/geoarrow-pandas/src/geoarrow/pandas/: __init__.py
python/geoarrow-pyarrow/: pyproject.toml
python/geoarrow-pyarrow/src/geoarrow/pyarrow/: __init__.py  _array.py  _compute.py  _dataset.py  _kernel.py  _type.py
python/geoarrow/geoarrow_python/: geoarrow_python.h
python/geoarrow/pyarrow/: __init__.py  _array.py  _compute.py  _dataset.py  _kernel.py  _type.py
python/src/geoarrow/: _lib.pyx  lib.py
python/src/geoarrow/geoarrow/: array_view.c  geoarrow.h  geoarrow_type.h  util.c
python/src/geoarrow/geoarrow_python/: geoarrow_config.h
python/src/geoarrow/pyarrow/: _compute.py  _kernel.py
python/tests/: test_geoarrow.py  test_geoarrow_dataset.py  test_geoarrow_lib.py  test_geoarrow_pandas.py  test_geoarrow_pandas_suite.py  test_geoarrow_pyarrow.py  test_geoarrow_pyarrow_compute.py
r/geoarrow/: .Rbuildignore  DESCRIPTION  NAMESPACE  bootstrap.R  configure  configure.win
r/geoarrow/R/: array.R  arrow-compat.R  handle.R  infer-default.R  kernel.R  nanoarrow-compat.R  sf-compat.R  type.R  vctr.R  wk-compat.R  wk-handle.R  zzz.R
r/geoarrow/man/: as_geoarrow_array.Rd  geoarrow_infer_schema.Rd  geoarrow_infer_schema_default.Rd  infer_geoarrow_schema.Rd
r/geoarrow/src/: .gitignore  init.c  r-init.c  r-kernel.c  r-sf-compat.c  r-vctr.c  r-wk-handle-stream.cc  type.c  wk-handle-stream.cc
r/geoarrow/tests/testthat/: test-array.R  test-arrow-compat.R  test-handle.R  test-infer-default.R  test-kernel.R  test-sf-compat.R  test-type.R  test-vctr.R  test-wk-compat.R  test-wk-handle.R
src/apidoc/: Doxyfile
src/geoarrow/: array.c  array_reader.c  array_reader_test.cc  array_test.cc  array_view.c  array_view_test.cc  array_writer.c  array_writer_test.cc  builder.c  builder_test.cc  double_parse_fast_float.cc  double_parse_std.c  double_print.c  double_serde_fast_float.cc  double_serde_std.c  fast_float.cc  fast_float.h  geoarrow.h  geoarrow.hpp  geoarrow_arrow.hpp  geoarrow_arrow_test.cc  geoarrow_config.h.in  geoarrow_ffi.h  geoarrow_hpp_test.cc  geoarrow_type.h  geoarrow_type_inline.h  geoarrow_type_inline_test.cc  geometry.c  geometry_test.cc  kernel.c  kernel_test.cc  metadata.c  metadata_test.cc  nanoarrow.c  nanoarrow.h  native_writer.c  native_writer_test.cc  scalar_udf.c  scalar_udf_test.cc  schema.c  (+19 more)
src/geoarrow/hpp/: array_reader.hpp  array_util.hpp  array_util_test.cc  array_writer.hpp  array_writer_test.cc  arrow_extension_type.hpp  arrow_extension_type_test.cc  binary_util.hpp  binary_util_test.cc  exception.hpp  geometry.hpp  geometry_data_type.hpp  geometry_data_type_test.cc  geometry_test.cc  geometry_type_traits.hpp  geometry_type_traits_test.cc  geometry_view.hpp  internal.hpp  iteration.hpp  iteration_test.cc  wkb_util.hpp  wkb_util_test.cc
src/geoarrow/nanoarrow/: nanoarrow.h
src/geoarrow/ryu/: LICENSE  common.h  d2fixed_full_table.h  d2s.c  d2s_full_table.h  d2s_intrinsics.h  digit_table.h  ryu.h
testing/: 0populate_test_data.R  README.md  geometrycollection.wkb  geometrycollection.wkt  geometrycollection_m.ewkb  geometrycollection_m.wkb  geometrycollection_m.wkt  geometrycollection_z.ewkb  geometrycollection_z.wkb  geometrycollection_z.wkt  geometrycollection_zm.ewkb  geometrycollection_zm.wkb  geometrycollection_zm.wkt  linestring.ewkb  linestring.wkt  linestring_m.ewkb  linestring_m.wkb  linestring_m.wkt  linestring_z.ewkb  linestring_z.wkb  linestring_z.wkt  linestring_zm.ewkb  linestring_zm.wkb  linestring_zm.wkt  multilinestring.ewkb  multilinestring.wkt  multilinestring_m.ewkb  multilinestring_m.wkb  multilinestring_m.wkt  multilinestring_z.ewkb  multilinestring_z.wkb  multilinestring_z.wkt  multilinestring_zm.ewkb  multilinestring_zm.wkb  multilinestring_zm.wkt  multipoint.ewkb  multipoint.wkt  multipoint_m.ewkb  multipoint_m.wkb  multipoint_m.wkt  (+41 more)
