
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "geoarrow-c"
dynamic = ["version"]
readme = "README.md"
description = "Python bindings to the geoarrow C and C++ implementation"
authors = [{name = "Dewey Dunnington", email = "dewey@dunnington.ca"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pyarrow", "pytest", "numpy"]

[project.urls]
homepage = "https://geoarrow.org"
repository = "https://github.com/geoarrow/geoarrow-c"

[build-system]
requires = [
    "setuptools >= 61.0.0",
    "setuptools-scm",
    # Something about cpdef changed here
    "Cython < 3.1.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "../.."
tag_regex = "geoarrow-c-python-([0-9]+.[0-9]+.[0-9]+)"
git_describe_command = "git describe --long --match='geoarrow-c-python-*'"
version_file = "src/geoarrow/c/_version.py"

[tool.pytest.ini_options]
consider_namespace_packages = true
